# CapacitacaoRust

./: .gitignore  README.md
Modulo1/: README.md
Modulo1/Aula1/: Cargo.toml
Modulo1/Aula1/src/: main.rs
Modulo1/Aula2/: Cargo.toml
Modulo1/Aula2/src/: compound_types.rs  functions.rs  lib.rs  scalar_types.rs
Modulo1/Aula3/: Cargo.toml
Modulo1/Aula3/src/: lib.rs
Modulo1/aula1/: Cargo.toml
Modulo1/aula1/src/: main.rs
Modulo1/aula2/: Cargo.toml
Modulo1/aula2/src/: functions.rs  lib.rs  references.rs  slices.rs
Modulo1/aula4/: Cargo.toml
Modulo1/aula4/src/: main.rs
Modulo1/aula5/: Cargo.toml
Modulo1/aula5/examples/rectangles/: main.rs
Modulo1/aula5/src/: main.rs
Modulo1/aula6/: Cargo.toml
Modulo1/aula6/src/: main.rs
Modulo1/aula7/: Cargo.toml  main
Modulo1/aula7/src/: main.rs
Modulo1/aula7/src/bank/: mod.rs
Modulo1/aula8/src/: main.rs
Modulo2/: README.md
Modulo2/aula1/src/: main.rs  manual_mem_management.c  memory.c
Modulo2/aula2/src/: main.rs
Modulo2/aula3/: Cargo.toml
Modulo2/aula3/src/: main.rs
Modulo2/aula4/src/: main.rs
Modulo2/aula5/: Cargo.toml
Modulo2/aula5/src/: main.rs
Modulo2/aula6/src/: main.rs
Modulo2/aula7/src/: main.rs  storage.rs
Modulo2/aula8/: Cargo.toml
Modulo2/aula8/src/: main.rs  storage.rs
Modulo3/: README.md
Modulo3/aula2/basic/: Cargo.toml
Modulo3/aula2/basic/.cargo/: config.toml
Modulo3/aula2/basic/src/: main.rs
Modulo3/aula2/desktop/: Cargo.toml
Modulo3/aula2/desktop/src/: main.rs
Modulo3/aula2/spi/: Cargo.toml
Modulo3/aula2/spi/.cargo/: config.toml
Modulo3/aula2/spi/src/: lis2dh.rs  main.rs
Modulo3/aula4/: Cargo.toml
Modulo3/aula4/src/: main.rs
Modulo3/aula5_stm32/: Cargo.toml  Embed.toml
Modulo3/aula5_stm32/src/: main.rs
Modulo3/aula8/: Cargo.toml  memory.x
Modulo3/aula8/.cargo/: config
Modulo3/aula8/src/: main.rs
Modulo3/complemento1/: Cargo.toml
Modulo3/complemento1/src/: main.rs
Modulo3/complemento2/: Cargo.toml
Modulo3/complemento2/src/: main.rs
Modulo3/complemento3/: Cargo.toml
Modulo3/complemento3/examples/clousure/: main.rs
Modulo3/complemento3/src/: lib.rs  physical.rs
Modulo3/complemento3/src/signals/: mod.rs  sawtooth.rs  sine.rs  square.rs
Modulo3/complemento4/: Cargo.toml
Modulo3/complemento4/src/: main.rs
Modulo3/complemento4/src/getters/: Cargo.toml
Modulo3/complemento4/src/getters/src/: lib.rs
Modulo3/complemento4/src/greetings/: Cargo.toml
Modulo3/complemento4/src/greetings/src/: lib.rs
Modulo3/complemento4/src/my_proc_macros_lib/: Cargo.toml
Modulo3/complemento4/src/my_proc_macros_lib/src/: lib.rs
