[package]
name = "aula4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
serde = { version = "1.0.157", default-features = false, features = ["derive"] }
serde-json-core = "0.5.0"
heapless = "0.7.16"
