[package]
name = "aula5_stm32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
embedded-graphics = "0.7"
sh1106 = "0.4"
stm32f4xx-hal = { version = "0.15.0", features = ["stm32f413"] }
rotary-encoder-embedded = { version = "0.2.0", features = ["standard", "angular-velocity"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
micromath = {version = "2.0.0", features = ["vector", "statistics"] }
scapegoat = "2.3.0"
heapless = "0.7.16"

