[package]
name = "aula8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = { version= "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "0.2"
stm32f4xx-hal = { version = "0.15.0", features = ["stm32f413", "rtic"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

cortex-m-rtic = "1.1.4"
