[package]
name = "complemento4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getters = { version = "0.1.0", path = "src/getters" }
greetings = { version = "0.1.0", path = "src/greetings" }
my_proc_macros_lib = { version = "0.1.0", path = "src/my_proc_macros_lib" }

