[package]
name = "spi"
version = "0.1.0"
authors = ["Matheus T. dos Santos <matheus.santos@edge.ufal.br>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.7.0", features = ["embassy", "async", "embassy-time-systick"] }
esp-backtrace = { version = "0.5.0", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-println = { version = "0.3.1", features = ["esp32c3"] }
embassy-executor = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["nightly"] }
embedded-hal-async = { version = "0.2.0-alpha.0" }
esp-alloc = { version = "0.2.0", features = ["oom-handler"] }
